[package]
name = "letsencrypt-inwx"
version = "1.1.1"
description = "A small cli utility for automating the letsencrypt dns-01 challenge for domains hosted by inwx"
authors = ["Matthias Herzog"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kegato/letsencrypt-inwx"

[package.metadata.deb]
depends = ""
extended-description = "A small cli utility for automating the letsencrypt dns-01 challenge for domains hosted by inwx. The dns-01 challenge is required for obtaining wildcard certificates from letsencrypt."
assets = [
	["target/release/letsencrypt-inwx", "usr/bin/", "755"],
	["etc/certbot-inwx-auth", "usr/lib/letsencrypt-inwx/", "755"],
	["etc/certbot-inwx-cleanup", "usr/lib/letsencrypt-inwx/", "755"]
]

[dependencies]
sxd-xpath = "*"
sxd-document = "*"
reqwest = "*"
trust-dns = "*"
clap = "*"
openssl-probe = "*"

[dependencies.cookie]
version = "*"
features = ["percent-encode"]
